backport fix to #111 from windows branch

--- a/src/jade/templates.jade
+++ b/src/jade/templates.jade
@@ -69,4 +69,4 @@
 
   .groupHeaderTemplate(data-win-control="WinJS.Binding.Template")
     .simpleHeaderItem
-      h2(data-win-bind="innerText: title")
+      h5.elsie-title(data-win-bind="innerText: title")
