--- a/src/jade/partials/tabs.jade
+++ b/src/jade/partials/tabs.jade
@@ -2,4 +2,6 @@
 h4.explanation#no-tabs(style="display: block;") You aren't watching any products. Look one up and star it to add it to the watchlist.
 
 #tabs
-  #tabGrid(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.tabTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
+  h5.elsie-title &nbsp;
+    span.clear clear
+  #tabGrid(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.tabTemplate'), selectionMode: 'multi', layout: {type: WinJS.UI.ListLayout}}")
