--- a/src/jade/partials/home_pivot.jade
+++ b/src/jade/partials/home_pivot.jade
@@ -5,5 +5,5 @@ doctype
   .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'search', isHeaderStatic: true }")
     include search.jade
     include recent.jade
-  .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'releases', isHeaderStatic: true }")
+  //.listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'releases', isHeaderStatic: true }")
     include releases.jade
