--- a/src/jade/partials/recent.jade
+++ b/src/jade/partials/recent.jade
@@ -3,4 +3,4 @@
     .right 
       span.clear clear
   h4.explanation#no-recents(style="display: block;") Your recently searched products will appear here. 
-  #recentProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'multi', layout: {type: WinJS.UI.ListLayout}}")
+  #recentProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
