remove swipe gestures on list views

--- a/src/jade/partials/tabs.jade
+++ b/src/jade/partials/tabs.jade
@@ -4,4 +4,4 @@ h4.explanation#no-tabs(style="display: block;") You aren't watching any products
 #tabs
   h5.elsie-title &nbsp;
     span.clear clear
-  #tabGrid(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.tabTemplate'), selectionMode: 'multi', layout: {type: WinJS.UI.ListLayout}}")
+  #tabGrid(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.tabTemplate'), selectionMode: 'multi', swipeBehavior : 'none', layout: {type: WinJS.UI.ListLayout}}")
