add review button

--- a/src/jade/about.jade
+++ b/src/jade/about.jade
@@ -11,4 +11,7 @@ doctype
       | 's amazing 
       a(href="http://lcboapi.com",target="_blank") LCBO API
       | . Product stock info is updated daily.
+    .button-group
+      button.donate(onclick="javascript:WinJS.Navigation.navigate('./home.html');") Cheers!
+      button.donate(onclick="javascript:Elsie.Interface.clickLink('http://www.windowsphone.com/s?appid=d1040ef2-5d48-4962-9a5b-e20c01fe1760');") Review Elsie
     p.affiliation Elsie &amp; the LCBO API aren't affiliated with the LCBO.
