--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,6 +12,7 @@ html
     // Cordova 4.0.0
     script(src='cordova.js',charset='utf-8')
     // Elsie 1.3
+    script(src='js/_keys.js',charset='utf-8')
     script(src='js/_navigator.js',charset='utf-8')
     script(src='js/_search.js',charset='utf-8')
     script(src='js/_services.js',charset='utf-8')
