--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -3,8 +3,13 @@ html
   head
     meta(charset='utf-8')
     title Elsie
+    // Angular
+    script(src='js/lib/angular.js',charset='utf-8')
+    script(src='js/lib/angular-animate.js',charset='utf-8')
+    script(src='js/lib/angular-aria.js',charset='utf-8')
     // Angular Material
     script(src='js/lib/angular-material.js',charset='utf-8')
+    link(rel='stylesheet', href='css/lib/angular-material.css')
     // Cordova 4.0.0
     script(src='cordova.js',charset='utf-8')
     // Elsie 2.0
