--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,9 +2,11 @@ doctype
 html
   head
     meta(charset='utf-8')
+    meta(name='viewport',content='initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width')
     title Elsie
     // Angular
     script(src='js/lib/angular.js',charset='utf-8')
+    script(src='js/lib/angular-ui-router.js',charset='utf-8')
     script(src='js/lib/angular-animate.js',charset='utf-8')
     script(src='js/lib/angular-aria.js',charset='utf-8')
     // Angular Material
@@ -15,5 +17,5 @@ html
     // Elsie 2.0
     //script(src='js/something.js',charset='utf-8')
     link(rel='stylesheet', href='css/app.css')
-  body
+  body(ng-app="elsie")
     h1 Hello. Welcome to v2.
