--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -21,8 +21,8 @@ html
     link(rel="stylesheet", href="css/app.css")
   body(ng-app="elsie")
     div(layout="column",layout-fill,ng-controller="AppCtrl")
-      md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id="menu")
-        md-toolbar
+      md-sidenav.md-sidenav-left.md-whiteframe-z2(md-component-id="menu",md-is-locked-open="$mdMedia('gt-md')")
+        md-toolbar.md-default-theme
           h1.md-toolbar-tools Elsie
         md-content(layout-padding,ng-controller="MenuCtrl")
           md-button(ng-click="close()",class="md-primary") Close
