switch to bower

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,175 +1,263 @@
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-thin-webfont.eot');
-  src: url('./fonts/roboto-thin-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-thin-webfont.woff') format('woff'), url('./fonts/roboto-thin-webfont.ttf') format('truetype');
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-Thin.eot');
+  src:  url('./fonts/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Thin.woff2') format('woff2'),
+        url('./fonts/Roboto-Thin.woff') format('woff'),
+        url('./fonts/Roboto-Thin.ttf') format('truetype'),
+        url('./fonts/Roboto-Thin.svg#Roboto') format('svg');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-thinitalic-webfont.eot');
-  src: url('./fonts/roboto-thinitalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-thinitalic-webfont.woff') format('woff'), url('./fonts/roboto-thinitalic-webfont.ttf') format('truetype');
+  font-family: 'Roboto-Thin';
+  src:  url('./fonts/Roboto-Thin.eot');
+  src:  url('./fonts/Roboto-Thin.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Thin.woff2') format('woff2'),
+        url('./fonts/Roboto-Thin.woff') format('woff'),
+        url('./fonts/Roboto-Thin.ttf') format('truetype'),
+        url('./fonts/Roboto-Thin.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-ThinItalic.eot');
+  src:  url('./fonts/Roboto-ThinItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-ThinItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-ThinItalic.woff') format('woff'),
+        url('./fonts/Roboto-ThinItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-ThinItalic.svg#Roboto') format('svg');
   font-weight: 100;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-light-webfont.eot');
-  src: url('./fonts/roboto-light-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-light-webfont.woff') format('woff'), url('./fonts/roboto-light-webfont.ttf') format('truetype');
+  font-family: 'Roboto-ThinItalic';
+  src:  url('./fonts/Roboto-ThinItalic.eot');
+  src:  url('./fonts/Roboto-ThinItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-ThinItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-ThinItalic.woff') format('woff'),
+        url('./fonts/Roboto-ThinItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-ThinItalic.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-Light.eot');
+  src:  url('./fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Light.woff2') format('woff2'),
+        url('./fonts/Roboto-Light.woff') format('woff'),
+        url('./fonts/Roboto-Light.ttf') format('truetype'),
+        url('./fonts/Roboto-Light.svg#Roboto') format('svg');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-lightitalic-webfont.eot');
-  src: url('./fonts/roboto-lightitalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-lightitalic-webfont.woff') format('woff'), url('./fonts/roboto-lightitalic-webfont.ttf') format('truetype');
+  font-family: 'Roboto-Light';
+  src:  url('./fonts/Roboto-Light.eot');
+  src:  url('./fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Light.woff2') format('woff2'),
+        url('./fonts/Roboto-Light.woff') format('woff'),
+        url('./fonts/Roboto-Light.ttf') format('truetype'),
+        url('./fonts/Roboto-Light.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-LightItalic.eot');
+  src:  url('./fonts/Roboto-LightItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-LightItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-LightItalic.woff') format('woff'),
+        url('./fonts/Roboto-LightItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-LightItalic.svg#Roboto') format('svg');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-regular-webfont.eot');
-  src: url('./fonts/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-regular-webfont.woff') format('woff'), url('./fonts/roboto-regular-webfont.ttf') format('truetype');
+  font-family: 'Roboto-LightItalic';
+  src:  url('./fonts/Roboto-LightItalic.eot');
+  src:  url('./fonts/Roboto-LightItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-LightItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-LightItalic.woff') format('woff'),
+        url('./fonts/Roboto-LightItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-LightItalic.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-Regular.eot');
+  src:  url('./fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Regular.woff2') format('woff2'),
+        url('./fonts/Roboto-Regular.woff') format('woff'),
+        url('./fonts/Roboto-Regular.ttf') format('truetype'),
+        url('./fonts/Roboto-Regular.svg#Roboto') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-italic-webfont.eot');
-  src: url('./fonts/roboto-italic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-italic-webfont.woff') format('woff'), url('./fonts/roboto-italic-webfont.ttf') format('truetype');
+  font-family: 'Roboto-Regular';
+  src:  url('./fonts/Roboto-Regular.eot');
+  src:  url('./fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Regular.woff2') format('woff2'),
+        url('./fonts/Roboto-Regular.woff') format('woff'),
+        url('./fonts/Roboto-Regular.ttf') format('truetype'),
+        url('./fonts/Roboto-Regular.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-RegularItalic.eot');
+  src:  url('./fonts/Roboto-RegularItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-RegularItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-RegularItalic.woff') format('woff'),
+        url('./fonts/Roboto-RegularItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-RegularItalic.svg#Roboto') format('svg');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-medium-webfont.eot');
-  src: url('./fonts/roboto-medium-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-medium-webfont.woff') format('woff'), url('./fonts/roboto-medium-webfont.ttf') format('truetype');
+  font-family: 'Roboto-RegularItalic';
+  src:  url('./fonts/Roboto-RegularItalic.eot');
+  src:  url('./fonts/Roboto-RegularItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-RegularItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-RegularItalic.woff') format('woff'),
+        url('./fonts/Roboto-RegularItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-RegularItalic.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-Medium.eot');
+  src:  url('./fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Medium.woff2') format('woff2'),
+        url('./fonts/Roboto-Medium.woff') format('woff'),
+        url('./fonts/Roboto-Medium.ttf') format('truetype'),
+        url('./fonts/Roboto-Medium.svg#Roboto') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-mediumitalic-webfont.eot');
-  src: url('./fonts/roboto-mediumitalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-mediumitalic-webfont.woff') format('woff'), url('./fonts/roboto-mediumitalic-webfont.ttf') format('truetype');
+  font-family: 'Roboto-Medium';
+  src:  url('./fonts/Roboto-Medium.eot');
+  src:  url('./fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Medium.woff2') format('woff2'),
+        url('./fonts/Roboto-Medium.woff') format('woff'),
+        url('./fonts/Roboto-Medium.ttf') format('truetype'),
+        url('./fonts/Roboto-Medium.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-MediumItalic.eot');
+  src:  url('./fonts/Roboto-MediumItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-MediumItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-MediumItalic.woff') format('woff'),
+        url('./fonts/Roboto-MediumItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-MediumItalic.svg#Roboto') format('svg');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-bold-webfont.eot');
-  src: url('./fonts/roboto-bold-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-bold-webfont.woff') format('woff'), url('./fonts/roboto-bold-webfont.ttf') format('truetype');
+  font-family: 'Roboto-MediumItalic';
+  src:  url('./fonts/Roboto-MediumItalic.eot');
+  src:  url('./fonts/Roboto-MediumItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-MediumItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-MediumItalic.woff') format('woff'),
+        url('./fonts/Roboto-MediumItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-MediumItalic.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-Bold.eot');
+  src:  url('./fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Bold.woff2') format('woff2'),
+        url('./fonts/Roboto-Bold.woff') format('woff'),
+        url('./fonts/Roboto-Bold.ttf') format('truetype'),
+        url('./fonts/Roboto-Bold.svg#Roboto') format('svg');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-bolditalic-webfont.eot');
-  src: url('./fonts/roboto-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-bolditalic-webfont.woff') format('woff'), url('./fonts/roboto-bolditalic-webfont.ttf') format('truetype');
+  font-family: 'Roboto-Bold';
+  src:  url('./fonts/Roboto-Bold.eot');
+  src:  url('./fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Bold.woff2') format('woff2'),
+        url('./fonts/Roboto-Bold.woff') format('woff'),
+        url('./fonts/Roboto-Bold.ttf') format('truetype'),
+        url('./fonts/Roboto-Bold.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-BoldItalic.eot');
+  src:  url('./fonts/Roboto-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-BoldItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-BoldItalic.woff') format('woff'),
+        url('./fonts/Roboto-BoldItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-BoldItalic.svg#Roboto') format('svg');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-black-webfont.eot');
-  src: url('./fonts/roboto-black-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-black-webfont.woff') format('woff'), url('./fonts/roboto-black-webfont.ttf') format('truetype');
+  font-family: 'Roboto-BoldItalic';
+  src:  url('./fonts/Roboto-BoldItalic.eot');
+  src:  url('./fonts/Roboto-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-BoldItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-BoldItalic.woff') format('woff'),
+        url('./fonts/Roboto-BoldItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-BoldItalic.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-Black.eot');
+  src:  url('./fonts/Roboto-Black.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Black.woff2') format('woff2'),
+        url('./fonts/Roboto-Black.woff') format('woff'),
+        url('./fonts/Roboto-Black.ttf') format('truetype'),
+        url('./fonts/Roboto-Black.svg#Roboto') format('svg');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url('./fonts/roboto-blackitalic-webfont.eot');
-  src: url('./fonts/roboto-blackitalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/roboto-blackitalic-webfont.woff') format('woff'), url('./fonts/roboto-blackitalic-webfont.ttf') format('truetype');
+  font-family: 'Roboto-Black';
+  src:  url('./fonts/Roboto-Black.eot');
+  src:  url('./fonts/Roboto-Black.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-Black.woff2') format('woff2'),
+        url('./fonts/Roboto-Black.woff') format('woff'),
+        url('./fonts/Roboto-Black.ttf') format('truetype'),
+        url('./fonts/Roboto-Black.svg#Roboto') format('svg');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src:  url('./fonts/Roboto-BlackItalic.eot');
+  src:  url('./fonts/Roboto-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-BlackItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-BlackItalic.woff') format('woff'),
+        url('./fonts/Roboto-BlackItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-BlackItalic.svg#Roboto') format('svg');
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Roboto_condensed";
-  src: url('./fonts_condensed/robotocondensed-light-webfont.eot');
-  src: url('./fonts_condensed/robotocondensed-light-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_condensed/robotocondensed-light-webfont.woff') format('woff'), url('./fonts_condensed/robotocondensed-light-webfont.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto_condensed";
-  src: url('./fonts_condensed/robotocondensed-lightitalic-webfont.eot');
-  src: url('./fonts_condensed/robotocondensed-lightitalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_condensed/robotocondensed-lightitalic-webfont.woff') format('woff'), url('./fonts_condensed/robotocondensed-lightitalic-webfont.ttf') format('truetype');
-  font-weight: 300;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto_condensed";
-  src: url('./fonts_condensed/robotocondensed-regular-webfont.eot');
-  src: url('./fonts_condensed/robotocondensed-regular-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_condensed/robotocondensed-regular-webfont.woff') format('woff'), url('./fonts_condensed/robotocondensed-regular-webfont.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto_condensed";
-  src: url('./fonts_condensed/robotocondensed-italic-webfont.eot');
-  src: url('./fonts_condensed/robotocondensed-italic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_condensed/robotocondensed-italic-webfont.woff') format('woff'), url('./fonts_condensed/robotocondensed-italic-webfont.ttf') format('truetype');
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto_condensed";
-  src: url('./fonts_condensed/robotocondensed-bold-webfont.eot');
-  src: url('./fonts_condensed/robotocondensed-bold-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_condensed/robotocondensed-bold-webfont.woff') format('woff'), url('./fonts_condensed/robotocondensed-bold-webfont.ttf') format('truetype');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto_condensed";
-  src: url('./fonts_condensed/robotocondensed-bolditalic-webfont.eot');
-  src: url('./fonts_condensed/robotocondensed-bolditalic-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_condensed/robotocondensed-bolditalic-webfont.woff') format('woff'), url('./fonts_condensed/robotocondensed-bolditalic-webfont.ttf') format('truetype');
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "Roboto_slab";
-  src: url('./fonts_slab/robotoslab-thin-webfont.eot');
-  src: url('./fonts_slab/robotoslab-thin-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_slab/robotoslab-thin-webfont.woff') format('woff'), url('./fonts_slab/robotoslab-thin-webfont.ttf') format('truetype');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto_slab";
-  src: url('./fonts_slab/robotoslab-light-webfont.eot');
-  src: url('./fonts_slab/robotoslab-light-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_slab/robotoslab-light-webfont.woff') format('woff'), url('./fonts_slab/robotoslab-light-webfont.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto_slab";
-  src: url('./fonts_slab/robotoslab-regular-webfont.eot');
-  src: url('./fonts_slab/robotoslab-regular-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_slab/robotoslab-regular-webfont.woff') format('woff'), url('./fonts_slab/robotoslab-regular-webfont.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto_slab";
-  src: url('./fonts_slab/robotoslab-bold-webfont.eot');
-  src: url('./fonts_slab/robotoslab-bold-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts_slab/robotoslab-bold-webfont.woff') format('woff'), url('./fonts_slab/robotoslab-bold-webfont.ttf') format('truetype');
-  font-weight: 700;
-  font-style: normal;
+  font-family: 'Roboto-BlackItalic';
+  src:  url('./fonts/Roboto-BlackItalic.eot');
+  src:  url('./fonts/Roboto-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/Roboto-BlackItalic.woff2') format('woff2'),
+        url('./fonts/Roboto-BlackItalic.woff') format('woff'),
+        url('./fonts/Roboto-BlackItalic.ttf') format('truetype'),
+        url('./fonts/Roboto-BlackItalic.svg#Roboto') format('svg');
 }
