start to implement search

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,6 +18,7 @@ html
     script(src="js/app.js",charset="utf-8")
     script(src="js/controllers.js",charset="utf-8")
     script(src="js/services.js",charset="utf-8")
+    script(src="js/keys.js",charset="utf-8")
     link(rel="stylesheet", href="css/app.css")
   body(ng-app="elsie")
     div(layout="column",layout-fill,ng-controller="AppCtrl")
