--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,3 +8,11 @@ md-toolbar {
   box-shadow: none;
   padding-top: 25px;
 }
+
+md-icon.md-default-theme {
+  color: rgba(255, 255, 255, 0.870588);
+}
+
+md-tabs {
+  margin-top: -1px;
+}
