modified search flow

--- a/src/jade/templates/home.jade
+++ b/src/jade/templates/home.jade
@@ -1,12 +1,14 @@
 doctype
 md-toolbar.md-default-theme
   .md-toolbar-tools
-    md-button.md-icon-button(aria-label='Settings', ng-click='toggleMenu()')
-      md-icon(md-svg-icon='img/menu.svg')    
+    md-button.md-icon-button(aria-label="Settings", ng-click="toggleMenu()")
+      md-icon(md-svg-icon="img/menu.svg")    
     h2
       span Elsie    
-    span(flex='')
-md-tabs.md-primary(md-selected='selectedIndex', md-no-pagination='true')
+    span(flex)
+    md-button.md-icon-button(aria-label="Search", ng-click="go('search')")
+      md-icon(md-svg-icon="img/search.svg")
+//md-tabs.md-primary(md-selected='selectedIndex', md-no-pagination='true')
   md-tab(label='Search', md-on-select="go('home.search')")
     div(ui-view='search')
   md-tab(label='Watchlist', md-on-select="go('home.watchlist')")
