--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,6 +2,7 @@
 @import 'animations';
 
 $purple: rgb(103,58,183);
+$pink: #E91E63;
 
 body {
   font-family: 'Roboto';
@@ -56,4 +57,8 @@ md-icon.md-default-theme {
 
 md-tabs {
   margin-top: -1px;
+}
+
+.md-autocomplete-suggestions.md-default-theme li .highlight {
+  color: $pink;
 }
