--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -28,5 +28,5 @@ html
         md-content(layout-padding,ng-controller="MenuCtrl")
           md-button(ng-click="close()",class="md-primary") Close
       md-content#main
-        .android-bar
+        //.android-bar
         div(ui-view)
