initialze product, scheduler and watchlist factories, break services out into multiple files

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,7 +17,10 @@ html
     // Elsie 2.0
     script(src="js/app.js",charset="utf-8")
     script(src="js/controllers.js",charset="utf-8")
-    script(src="js/services.js",charset="utf-8")
+    script(src="js/services/master.js",charset="utf-8")
+    script(src="js/services/scheduler.js",charset="utf-8")
+    script(src="js/services/products.js",charset="utf-8")
+    script(src="js/services/watchlist.js",charset="utf-8")
     script(src="js/keys.js",charset="utf-8")
     link(rel="stylesheet", href="css/app.css")
   body(ng-app="elsie")
