--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,6 +18,7 @@ html
     script(src="js/app.js",charset="utf-8")
     script(src="js/controllers.js",charset="utf-8")
     script(src="js/services/master.js",charset="utf-8")
+    script(src="js/services/location.js",charset="utf-8")
     script(src="js/services/scheduler.js",charset="utf-8")
     script(src="js/services/products.js",charset="utf-8")
     script(src="js/services/watchlist.js",charset="utf-8")
