--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -5,4 +5,9 @@
     background-repeat: no-repeat;
     background-position-x: center;
   }
+  a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
+    position: absolute;
+    right: 20px;
+    top: 165px;
+  }
 }
