move image to md-content area

--- a/src/jade/templates/product.jade
+++ b/src/jade/templates/product.jade
@@ -1,6 +1,7 @@
 doctype
 .product(layout="column")
-  .image(flex="100",ng-style="image")
+  md-content
+    .image(flex="100",ng-style="image")
   md-toolbar
     .md-toolbar-tools
       h2.md-flex {{ product.name }}
