--- a/src/jade/templates/product.jade
+++ b/src/jade/templates/product.jade
@@ -5,8 +5,9 @@ doctype
   md-toolbar
     .md-toolbar-tools
       h2.md-flex {{ product.name }}
-  md-button.md-fab(aria-label="Add to Watchlist")
-    md-icon(md-svg-src='img/star_rate.svg')
+  md-button.md-fab(aria-label="Add to Watchlist",ng-click="toggleWatch(product)")
+    md-icon(md-svg-src='img/favorite.svg',ng-show="isWatched")
+    md-icon(md-svg-src='img/favorite_outline.svg',ng-show="!isWatched")
   md-content.md-whiteframe-z5(layout-padding)
     md-list
       md-list-item.md-2-line
