watchlist implementation start

--- a/src/jade/templates/home.jade
+++ b/src/jade/templates/home.jade
@@ -13,3 +13,4 @@ md-toolbar.md-default-theme
     div(ui-view='search')
   md-tab(label='Watchlist', md-on-select="go('home.watchlist')")
     div(ui-view='watchlist')
+div(ui-view='watchlist')
