--- a/src/jade/templates/home/watchlist.jade
+++ b/src/jade/templates/home/watchlist.jade
@@ -1,5 +1,5 @@
 doctype
-md-card(ng-repeat="product in watchlist")
+md-card(ng-repeat="product in watchlist",flex="50",ng-click="loadProduct(product)")
   md-card-content
-    h2.md-title Watchlist
-    p Content
+    h2.md-title {{ product.name }}
+    p {{ product.no }}
