--- a/src/jade/templates/product.jade
+++ b/src/jade/templates/product.jade
@@ -1,5 +1,5 @@
 doctype
-.product(layout="column")
+.product.single(layout="column")
   md-content
     .image(flex="100",ng-style="image")
     md-toolbar
