--- a/src/scss/watchlist.scss
+++ b/src/scss/watchlist.scss
@@ -1,6 +1,7 @@
 .watchlist {
   .product {
     background-size: auto 100%;
+    background-color: white;
     background-position: center;
     background-repeat: no-repeat;
   }
