--- a/src/scss/animations.scss
+++ b/src/scss/animations.scss
@@ -1,26 +1,73 @@
+/* Have to set height explicity on ui-view 
+to prevent collapsing during animation*/
 [ui-view] {
-  transition: opacity 0.3s;
+  position: absolute;
+  top: 25px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  &.state-product {
+    //top: 0;
+  }
+}
+
+[ui-view="watchlist"] {
+  top: 0;
+  background-color: #fafafa;
 }
 
 [ui-view].ng-enter, [ui-view].ng-leave {
-  left: 0;
-  right: 0;
-  position: absolute;
-  z-index: 500;
-}
-
-[ui-view].ng-enter {
-  opacity: 0;
-}
-
-[ui-view].ng-enter-active {
-  opacity: 1; 
+  -webkit-transition:all .5s ease-in-out;
+    -moz-transition:all .5s ease-in-out;
+    -o-transition:all .5s ease-in-out;
+    transition:all .5s ease-in-out;
 }
 
 [ui-view].ng-leave {
-  opacity: 1; 
+  bottom: 0;
+  z-index: 0;
+  &.state-product {
+    z-index: 1;
+    -webkit-transform:translate3d(0, 0, 0);
+    -moz-transform:translate3d(0, 0, 0);
+    transform:translate3d(0, 0, 0);
+  } 
 }
 
 [ui-view].ng-leave-active {
-  opacity: 0;
+  bottom: 1px;
+  z-index: 0;
+  &.state-product {
+    z-index: 1;
+    -webkit-transform:translate3d(0, 100%, 0);
+    -moz-transform:translate3d(0, 100%, 0);
+    transform:translate3d(0, 100%, 0);
+  } 
+}
+
+[ui-view].ng-enter {
+  &.state-product {
+    z-index: 1;
+    -webkit-transform:translate3d(0, 100%, 0);
+    -moz-transform:translate3d(0, 100%, 0);
+    transform:translate3d(0, 100%, 0);
+  } 
+  &.state-search {
+    z-index: 1;
+    opacity: 0;
+  }
+}
+
+[ui-view].ng-enter-active {
+  &.state-product {
+    opacity: 1;
+    z-index: 1;
+    -webkit-transform:translate3d(0, 0, 0);
+    -moz-transform:translate3d(0, 0, 0);
+    transform:translate3d(0, 0, 0);
+  }
+  &.state-search {
+    z-index: 1;
+    opacity: 1;
+  }
 }
