--- a/src/jade/templates/product.jade
+++ b/src/jade/templates/product.jade
@@ -1,14 +1,16 @@
 doctype
 .product.single(layout="column")
-  md-content
-    .image(flex="100",ng-style="image")
+  md-content.upper
+    md-button.md-icon-button(aria-label="Back", ui-sref="home.watchlist")
+      md-icon(md-svg-icon="img/arrow_back.svg")
+    .image(ng-style="image")
     md-toolbar
       .md-toolbar-tools
         h2.md-flex {{ product.name }}
   md-button.md-fab(aria-label="Add to Watchlist",ng-click="toggleWatch(product)")
     md-icon(md-svg-src='img/favorite.svg',ng-show="isWatched")
     md-icon(md-svg-src='img/favorite_outline.svg',ng-show="!isWatched")
-  md-content.md-whiteframe-z5(layout-padding)
+  md-content.lower.md-primary
     md-list
       md-list-item.md-2-line
         .md-list-item-text
