--- a/src/jade/templates/product.jade
+++ b/src/jade/templates/product.jade
@@ -10,7 +10,7 @@ doctype
   md-button.md-fab(aria-label="Add to Watchlist",ng-click="toggleWatch(product)")
     md-icon(md-svg-src='img/favorite.svg',ng-show="isWatched")
     md-icon(md-svg-src='img/favorite_outline.svg',ng-show="!isWatched")
-  md-content.lower.md-primary
+  md-content.lower.md-default.md-hue-1
     md-list
       md-list-item.md-2-line
         .md-list-item-text
