--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -20,7 +20,7 @@
   md-content.upper {
     .md-icon-button {
       float: left;
-      margin: 0;
+      margin: 25px 0 0;
       md-icon {
         color: $charcoal;
       }
