--- a/src/scss/watchlist.scss
+++ b/src/scss/watchlist.scss
@@ -1,9 +1,9 @@
 .watchlist {
   margin: 0 8px;
   .product {
-    background-size: auto 100%;
+    background-size: 400%;
     background-color: white;
-    background-position: center;
+    background-position: center 50%;
     background-repeat: no-repeat;
   }
 }
